components/argocd-agent-synctest/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: synctest
  annotations:
    argocd.argoproj.io/sync-wave: "3"
  labels:
    app: synctest
spec:
  selector:
    app: synctest
  ports:
    - name: http
      port: 8080
      targetPort: http
