components/argocd-agent-synctest/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: synctest
  annotations:
    argocd.argoproj.io/sync-wave: "4"
  labels:
    app: synctest
spec:
  to:
    kind: Service
    name: synctest
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
